--- a/ledger/templates/api/components/nav.html
+++ b/ledger/templates/api/components/nav.html
@@ -15,6 +15,9 @@
                 <li class="nav-item {% if request.resolver_match.url_name == 'taxes' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'taxes' %}" hx-get="{% url 'taxes' %}" hx-target="#container">Taxes</a>
                 </li>
+                <li class="nav-item {% if request.resolver_match.url_name == 'reconciliation' %}active{% endif %}">
+                    <a class="nav-link" href="{% url 'reconciliation' %}" hx-get="{% url 'reconciliation' %}" hx-target="#container">Reconciliation</a>
+                </li>
             </ul>
         </div>
     </div>
